--- a/public/about/index.html
+++ b/public/about/index.html
@@ -37,10 +37,7 @@ Active Certifications: OSCP (Offensive Security Certified Professional) GREM (GI
           <a class="app-header-menu-item" href="/tags/">Tags</a>
              - 
           
-          <a class="app-header-menu-item" href="/about/">About</a>
-             - 
-          
-          <a class="app-header-menu-item" href="/about/">whoami</a>
+          <a class="app-header-menu-item" href="/whoami/">whoami</a>
       </nav>
       <p>𝙄𝙩’𝙨 𝙣𝙤𝙩 𝙤𝙫𝙚𝙧 𝙬𝙝𝙚𝙣 𝙮𝙤𝙪 𝙡𝙤𝙨𝙚, 𝙞𝙩’𝙨 𝙤𝙫𝙚𝙧 𝙬𝙝𝙚𝙣 𝙮𝙤𝙪 𝙦𝙪𝙞𝙩.</p>
       <div class="app-header-social">
